--- a/Prevu.Synoptics.V2150_Planeta/Pages/P330.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P330.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="835" Canvas.Left="356" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="5" Width="370" Canvas.Left="589" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Misc:DashedLine.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -20,9 +20,9 @@
         </TransformGroup>
       </Misc:DashedLine.RenderTransform>
     </Misc:DashedLine>
-    <Labels:Pipe Width="538" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="782" Canvas.Top="90" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="555" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="210" Canvas.Top="90" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="50" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="735" Canvas.Top="70" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="538" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="782" Canvas.Top="104" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="555" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="210" Canvas.Top="104" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="50" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="735" Canvas.Top="84" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -32,7 +32,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="50" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="762" Canvas.Top="70" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="50" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="762" Canvas.Top="84" VisibilityComponent="279-21-CV1" VisibilitySignal="LS2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -42,9 +42,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="538" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="782" Canvas.Top="120" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="555" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="210" Canvas.Top="120" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="50" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="735" Canvas.Top="140" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="538" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="782" Canvas.Top="134" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="555" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="210" Canvas.Top="134" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="50" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="735" Canvas.Top="154" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -54,7 +54,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="50" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="762" Canvas.Top="140" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="50" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="762" Canvas.Top="154" VisibilityComponent="299-21-CV1" VisibilitySignal="LS2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -152,7 +152,7 @@
     <Machines:SCW_ScrewConveyor_straight Height="22" Width="70" Canvas.Left="165" Canvas.Top="369" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:SCW_ScrewConveyor_straight Height="22" Width="225" Canvas.Left="120" Canvas.Top="265" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="52" Canvas.Left="124" Canvas.Top="30"/>
-    <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="714" Canvas.Top="639" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="716" Canvas.Top="639" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_STR_BatchReactor Height="229" Canvas.Left="179" Canvas.Top="555" Width="105" HorizontalAlignment="Left" VerticalAlignment="Center" Color="WetMaterial" ComponentName="330-41-LT1" TrendName="LEVEL"/>
     <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="180" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:CV_Valve.RenderTransform>
@@ -171,7 +171,7 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="306-01-MA1" Canvas.Left="65" Canvas.Top="300" />
     <Labels:DeviceLabel ComponentName="308-01-MA1" Canvas.Left="244" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="300-41-LT1" Canvas.Left="105" Canvas.Top="99"/>
-    <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="728" Canvas.Top="665" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="730" Canvas.Top="665" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="187" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="324-21-CV1" Canvas.Left="120" Canvas.Top="450" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="324-01-MA1" Canvas.Left="285" Canvas.Top="454" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -180,7 +180,7 @@
     <Labels:DetailsLabel ComponentName="335-VIEW" DetailsPageName="D335" Canvas.Left="422" Canvas.Top="711" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="335-MIXER" Canvas.Left="403" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="125" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="460" Canvas.Top="557" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="354-HEAT" Canvas.Left="580" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
+    <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="354-HEAT" Canvas.Left="584" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
     <Labels:Pipe Width="84" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="1040" Canvas.Top="749" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -292,7 +292,7 @@
         </TransformGroup>
       </Labels:DetailsLabel.RenderTransform>
     </Labels:DetailsLabel>
-    <Labels:DeviceLabel ComponentName="316-01-MA1" Canvas.Left="1372" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:DeviceLabel ComponentName="316-01-MA1" Canvas.Left="1374" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="318-01-MA1" Canvas.Left="968" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="340-MIXER" Canvas.Left="1037" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="338-21-CV1" Canvas.Left="968" Canvas.Top="450" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -301,11 +301,11 @@
     <Machines:V01_STR_BatchReactor Height="229" Canvas.Left="1245" Canvas.Top="555" Width="105" Color="WetMaterial" ComponentName="345-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="345-VIEW" DetailsPageName="D345" Canvas.Left="1272" Canvas.Top="711" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="345-MIXER" Canvas.Left="1253" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="354-HEAT" Canvas.Left="865" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Center" JumpFromLabel="300-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="726" Canvas.Top="9" />
-    <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="299-21-CV1" Canvas.Left="726" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Center" Direction="Left" />
-    <TextBlock Width="94" Canvas.Top="293" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="665" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S"/><Run Language="it-it" Text="510"/></TextBlock>
-    <TextBlock Width="94" Canvas.Top="293" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="784" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S"/><Run Language="it-it" Text="5"/><Run Text="1"/><Run Language="it-it" Text="1"/></TextBlock>
+    <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="354-HEAT" Canvas.Left="869" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="300-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="726" Canvas.Top="25" />
+    <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="299-21-CV1" Canvas.Left="726" Canvas.Top="156" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left" />
+    <TextBlock Width="94" Canvas.Top="301" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="665" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S"/><Run Language="it-it" Text="510"/></TextBlock>
+    <TextBlock Width="94" Canvas.Top="301" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="784" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S"/><Run Language="it-it" Text="5"/><Run Text="1"/><Run Language="it-it" Text="1"/></TextBlock>
     <Machines:V01_SLX_Silo Canvas.Left="1292" Canvas.Top="60" Height="209" Width="160" ComponentName="310-41-LT1" TrendName="LEVEL" Color="DryMaterial" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:Radar Height="46" Width="52" Canvas.Left="1346" Canvas.Top="30" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="310-41-LT1" Canvas.Left="1327" Canvas.Top="99" HorizontalAlignment="Left" VerticalAlignment="Center"/>
