--- a/Prevu.Synoptics.V2150_Planeta/Pages/P380.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P380.xaml
@@ -30,7 +30,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="63" Canvas.Top="584" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1251" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="70" Color="Water" StatusComponent="386-01-MA1" Canvas.Left="144" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Width="70" Color="Water" StatusComponent="386-01-MA1" Canvas.Left="150" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -105,7 +105,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="70" Canvas.Top="359" StatusComponent="453-01-MA1" Canvas.Left="591" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="120" StatusComponent="384-01-MA1" PipeHeight="Medium" Canvas.Left="520" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" Color="Water" StatusComponent="386-01-MA1" Canvas.Left="177" Canvas.Top="399"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" Color="Water" StatusComponent="386-01-MA1" Canvas.Left="183" Canvas.Top="399"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" Color="Water" StatusComponent="380-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="276" Canvas.Top="263">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -129,7 +129,7 @@
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="166" Canvas.Top="57"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="172" Color="Water" StatusComponent="519-01-MA1" Canvas.Left="108" Canvas.Top="160"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="58" StatusComponent="380-01-MA1" PipeHeight="Medium" Canvas.Left="438" Canvas.Top="331"/>
-    <Labels:Pipe Width="46" StatusComponent="387-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="62" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="46" StatusComponent="387-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="66" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -173,8 +173,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="135" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="714" Canvas.Top="613" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{lex:Loc ADDITIVE}"/>
-    <Labels:Pipe Width="131" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="651" Canvas.Top="684" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="135" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="714" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{lex:Loc ADDITIVE}"/>
+    <Labels:Pipe Width="131" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="651" Canvas.Top="692" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -184,7 +184,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="450-21-CV1" Canvas.Left="587" Canvas.Top="690" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="450-21-CV1" Canvas.Left="587" Canvas.Top="698" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -194,11 +194,11 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="44" StatusComponent="450-21-CV1" Canvas.Left="616" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Color="Water" Width="44" StatusComponent="450-21-CV1" Canvas.Left="616" Canvas.Top="629" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="220" Color="Water" StatusComponent="457-01-MA1" Canvas.Left="787" Canvas.Top="791" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="309" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="268" Canvas.Top="791" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="309" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="282" Canvas.Top="791" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Color="Vapor" Width="73" StatusComponent="450-22-CV1" Canvas.Left="527" Canvas.Top="706" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="284" Canvas.Top="650" StatusComponent="453-01-MA1" Canvas.Left="128" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="284" Canvas.Top="650" StatusComponent="453-01-MA1" Canvas.Left="142" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -208,7 +208,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="327" Canvas.Top="510" StatusComponent="453-01-MA1" Canvas.Left="268" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="313" Canvas.Top="510" StatusComponent="453-01-MA1" Canvas.Left="282" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Rectangle HorizontalAlignment="Center" Height="64" VerticalAlignment="Top" Width="79" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="265" Canvas.Top="368"/>
     <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="361" Canvas.Top="85">
       <Rectangle.RenderTransform>
@@ -230,7 +230,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:Waste Height="46" Width="44" Canvas.Left="63" Canvas.Top="473" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:Waste Height="46" Width="44" Canvas.Left="67" Canvas.Top="473" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:WaterPump Width="45" VerticalAlignment="Center" Canvas.Top="430" RenderTransformOrigin="0.5,0.5" Canvas.Left="1116" Height="45" HorizontalAlignment="Left" Color="Water"/>
     <Machines:V01_VSP_SepTank_wBottomScrew Canvas.Left="822" Canvas.Top="301" Height="193" Width="273" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:STR_Washing_reactor_B Height="162" Width="155" Canvas.Left="586" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -246,7 +246,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="545" Canvas.Top="573" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="545" Canvas.Top="581" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -256,7 +256,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="839" Canvas.Top="601" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="839" Canvas.Top="609" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -277,8 +277,8 @@
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="481" Canvas.Top="307" Height="58" Width="58"/>
-    <Machines:V01_VRC_WaterTank Canvas.Left="568" Canvas.Top="733" HorizontalAlignment="Left" VerticalAlignment="Center" Width="242" Height="97" ComponentName="450-41-LT1" TrendName="LEVEL"/>
-    <Machines:V01_SCW_Screw_wHopper Canvas.Left="67" Canvas.Top="401" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top" Width="161" Height="157">
+    <Machines:V01_VRC_WaterTank Canvas.Left="568" Canvas.Top="725" HorizontalAlignment="Center" VerticalAlignment="Top" Width="242" Height="97" ComponentName="450-41-LT1" TrendName="LEVEL"/>
+    <Machines:V01_SCW_Screw_wHopper Canvas.Left="71" Canvas.Top="401" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Center" Width="161" Height="157">
       <Machines:V01_SCW_Screw_wHopper.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -302,18 +302,18 @@
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
     <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="380-01-MA1" JumpToLabel="376-01-MA1" Canvas.Left="95" Canvas.Top="27"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="380-23-CV1" JumpToLabel="519-01-MA1" Canvas.Left="47" Canvas.Top="128"/>
-    <Labels:JumpLabel JumpFromLabel="455-01-MA1" JumpToLabel="456-01-MA1" Canvas.Left="1435" Canvas.Top="565" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="380-23-CV1" JumpToLabel="519-01-MA1" Canvas.Left="49" Canvas.Top="128"/>
+    <Labels:JumpLabel JumpFromLabel="455-01-MA1" JumpToLabel="456-01-MA1" Canvas.Left="1431" Canvas.Top="565" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel JumpFromLabel="457-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="939" Canvas.Top="758" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel JumpFromLabel="440-01-MA1" JumpToLabel="442-01-MA1" Canvas.Left="1375" Canvas.Top="700" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-VALVE" DetailsPageName="D380" Canvas.Left="422" Canvas.Top="37"/>
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="380-VALVE" DetailsPageName="D380" Canvas.Left="422" Canvas.Top="41"/>
     <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="943" Canvas.Top="265" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="380-RINSE" DetailsPageName="D380_2" Canvas.Left="171" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="387-01-MA1" Canvas.Left="42" Canvas.Top="346" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="387-01-MA1" Canvas.Left="48" Canvas.Top="346" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="463" Canvas.Top="108"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="386-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="261" Canvas.Top="438"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="384-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="465" Canvas.Top="369"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-DCE" RenderTransformOrigin="0.567,-2.17" Canvas.Left="317" Canvas.Top="37"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="380-DCE" RenderTransformOrigin="0.567,-2.17" Canvas.Left="317" Canvas.Top="41"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-01-YA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="463" Canvas.Top="174"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-02-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="569" Canvas.Top="174"/>
     <Labels:DeviceLabel ComponentName="431-01-MA1" Canvas.Left="1094" Canvas.Top="487" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -325,12 +325,12 @@
     <Labels:DeviceLabel ComponentName="455-01-MA1" Canvas.Left="1384" Canvas.Top="388" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="453-01-MA1" Canvas.Left="333" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="457-01-MA1" Canvas.Left="829" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="450-21-CV1" Canvas.Left="555" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="451-21-CV1" Canvas.Left="816" Canvas.Top="543" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="450-21-CV1" Canvas.Left="555" Canvas.Top="551" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="451-21-CV1" Canvas.Left="816" Canvas.Top="551" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="450-22-CV1" Canvas.Left="465" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="592" Canvas.Top="754" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="592" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="440-01-MA1" Canvas.Left="1194" Canvas.Top="716" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="380-22-CV1"  Canvas.Left="190" Canvas.Top="285"/>
-    <Labels:DeviceLabel ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="696" Canvas.Top="754" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="696" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
