V3085: Ripristimo Filtro presso Triplo

--- a/Prevu.Synoptics.V3085_Anviplas/OverallView.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/OverallView.xaml
@@ -28,7 +28,7 @@
         <Labels:Pipe Canvas.Left="2690" Canvas.Top="1667" PipeHeight="Medium" Width="204" HorizontalAlignment="Center" VerticalAlignment="Center" StatusComponent="233-01-MA1"/>
         <Labels:Pipe Canvas.Left="2633" Canvas.Top="1153" Width="118" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="2885" Canvas.Top="504" PipeHeight="Medium" Width="157" StatusComponent="233-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4840" Canvas.Top="125" PipeHeight="Medium" Width="326" StatusComponent="430-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="4840" Canvas.Top="97" PipeHeight="Medium" Width="326" StatusComponent="430-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="4271" Canvas.Top="535" PipeHeight="Medium" Width="884" StatusComponent="430-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="4709" Canvas.Top="973" PipeHeight="Medium" Width="882" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="4675" Canvas.Top="291" PipeHeight="Medium" Width="340" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="4661" Canvas.Top="277" PipeHeight="Medium" Width="368" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -182,6 +182,61 @@
         <Labels:Pipe Canvas.Left="4430" Canvas.Top="1204" Width="615" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="4447" Canvas.Top="1281" Width="598" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5041" Canvas.Top="1635" Width="160" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5524" Canvas.Top="1532" Width="56" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5952" Canvas.Top="608" Width="416" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5578" Canvas.Top="1132" Width="752" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="6322" Canvas.Top="667" Width="46" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6335" Canvas.Top="638" Width="62" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5550" Canvas.Top="1506" Width="406" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5893" Canvas.Top="667" Width="122" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5353" Canvas.Top="1789" Width="398" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5877" Canvas.Top="1986" Width="203" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5550" Canvas.Top="1986" Width="299" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5018" Canvas.Top="2389" Width="1522" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
         <Labels:Pipe Canvas.Left="3867" Canvas.Top="1065" Width="494" Color="Water" StatusComponent="431-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -208,7 +263,8 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4753" Canvas.Top="1358" Width="277" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5055" Canvas.Top="1358" Width="78" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="5167" Canvas.Top="1358" Width="874" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5167" Canvas.Top="1358" Width="778" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5964" Canvas.Top="1358" Width="78" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5894" Canvas.Top="1214" Width="292" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -238,8 +294,8 @@
         <local:P288 d:CacheMode="BitmapCache" Canvas.Left="2600" Canvas.Top="1861" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P430 d:CacheMode="BitmapCache" Canvas.Left="2858" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P450 d:CacheMode="BitmapCache" Canvas.Left="3581" Canvas.Top="1107" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P464 d:CacheMode="BitmapCache" Canvas.Left="4981" Canvas.Top="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <local:P474 d:CacheMode="BitmapCache" Canvas.Left="4979" Canvas.Top="1367" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <local:P464 d:CacheMode="BitmapCache" Canvas.Left="4997" Canvas.Top="34" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P474 d:CacheMode="BitmapCache" Canvas.Left="4995" Canvas.Top="1353" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P510 d:CacheMode="BitmapCache" Canvas.Left="6235" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P520 d:CacheMode="BitmapCache" Canvas.Left="6233" Canvas.Top="2011" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P570 d:CacheMode="BitmapCache" Canvas.Left="7736" Canvas.Top="1596" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
