--- a/Prevu.Synoptics.V3085_Anviplas/D474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D474.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.D474"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,12 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Pits="clr-namespace:Prevu.Drawings.Machines.Pits;assembly=Prevu.Drawings" 
+             x:Class="Prevu.Synoptics.D474" 
              mc:Ignorable="d" 
-              d:Background="{DynamicResource MaterialDesignPaper}">
-  <Canvas Height="425" Width="468">
-    <Labels:Pipe HorizontalAlignment="Left" Margin="213,65,0,0" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-25-CV1">
+             d:Background="{DynamicResource MaterialDesignPaper}">
+  <Canvas Height="375" Width="519">
+    <Labels:Pipe Width="98" StatusComponent="460-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="213" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -19,113 +21,13 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-03-MA1" Canvas.Left="305" Canvas.Top="292">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform />
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="222" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-25-CV1" Canvas.Left="215" Canvas.Top="160">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform />
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-03-MA1" Canvas.Left="15" Canvas.Top="292">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform />
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="116" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-03-MA1" Canvas.Left="171" Canvas.Top="216">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform />
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Oil" Width="295" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-03-MA1" Canvas.Left="34" Canvas.Top="273"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="101" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-25-CV1" Canvas.Left="227" Canvas.Top="51"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="206,119,0,0" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-25-CV1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform />
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="174" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="474-25-CV1" Canvas.Left="44" Canvas.Top="91" InverseStatus="True"/>
-    <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="54" RenderTransformOrigin="0.5,0.5" Canvas.Left="92" Canvas.Top="74">
-      <d:Rectangle.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </d:Rectangle.RenderTransform>
-    </Rectangle>
-    <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="111" Canvas.Top="92"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" Margin="211,149,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="30" Width="36">
-      <Machines:CV_Valve.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:CV_Valve.RenderTransform>
-    </Machines:CV_Valve>
-    <Machines:EXC_Air HorizontalAlignment="Left" VerticalAlignment="Top" Height="28" Width="60" Canvas.Left="298" Canvas.Top="249" RenderTransformOrigin="0.5,0.5">
-      <Machines:EXC_Air.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:EXC_Air.RenderTransform>
-    </Machines:EXC_Air>
-    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="66" Width="48" Color="Oil" Canvas.Left="71" Canvas.Top="249"/>
-    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" VerticalAlignment="Top" Height="108" Width="358" Canvas.Left="20" Canvas.Top="307"/>
-    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="258,338,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="80" Height="16">
-      <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleY="-1"/>
-          <SkewTransform/>
-          <RotateTransform Angle="-90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-    </Machines:SCW_ScrewConveyor_straight>
-    <Machines:V01_CV_ValveDouble Canvas.Left="205" Canvas.Top="83" Height="33" Width="39" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-      <Machines:V01_CV_ValveDouble.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:V01_CV_ValveDouble.RenderTransform>
-    </Machines:V01_CV_ValveDouble>
-    <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="44" Canvas.Top="85">
+    <Machines:V01_FP_Hopper_DETAIL Canvas.Left="21" Canvas.Top="50" Height="334" Width="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="474-61-LEV" SignalName="LSHA" Canvas.Left="229" Canvas.Top="85" />
+    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSLA1" Canvas.Left="87" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Center" FlowDirection="LeftToRight"/>
+    <Labels:SignalLabel ComponentName="474-61-LEV" SignalName="LSLA2" Canvas.Left="260" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:DeviceLabel 
+            ComponentName="474-61-LEV" Canvas.Left="222" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="238" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -135,30 +37,5 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-03-PT1" Canvas.Left="74" Canvas.Top="26"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="474-05-MA1" Canvas.Left="355" Canvas.Top="238"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-03-MA1" Height="50" Canvas.Left="50" Canvas.Top="201"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="190,318,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="474-11-R1"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-22-CV2" Canvas.Left="337" Canvas.Top="68"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-22-CV1" Canvas.Left="337" Canvas.Top="130"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-25-CV1" Height="50" Canvas.Left="121" Canvas.Top="138"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="474-42-TT1" Canvas.Left="85" Canvas.Top="318"/>
   </Canvas>
 </UserControl>
